# OpenMP-Labs

./: .gitignore  README.md
lab_6/: CMakeLists.txt  conf.txt  lab_6.pro  main.cpp
lab_6/cfg/: conf.txt  params.ini
lab_6/example/: main.c
lab_7_1/: lab_7_1.pro  main.cpp
lab_7_2/: lab_7_2.pro  main.cpp
lab_7_2/cfg/: conf.txt
lab_7_2/example/: example.pro
