#========================================================================================

project( lab_6 )

#----------------------------------------------------------------------------------------

set( CMAKE_CXX_FLAGS "-fopenmp" )

#========================================================================================

set( CMAKE_VERBOSE_MAKEFILE ON )

set( CMAKE_BUILD_TYPE "Release" )

set( CMAKE_CXX_STANDARD 11 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )

#========================================================================================

set( SRC main.cpp )

#========================================================================================

add_executable( ${PROJECT_NAME} ${INC} ${SRC} )

target_link_libraries( ${PROJECT_NAME} )

#========================================================================================
